# N3

./: LICENSE  README.md  pyproject.toml  requirements.txt
benchmarking/: bessel_scaling_analysis.ipynb  bessel_standard.py  bessel_static.py  gaussian_standard.py  gaussian_static.py  mnist1d_standard.py  mnist1d_static.py  spiral_scaling_analysis.ipynb  spiral_standard.py  spiral_static.py
config/: sweeps.yaml  wandb.yaml
mathematica/: RegessionLambdaLoopExample.nb
nbs/: bessel_standard.ipynb  bessel_static.ipynb  gaussian_standard.ipynb  gaussian_static.ipynb  mnist1d_standard.ipynb  mnist1d_static.ipynb  prototyping.ipynb  spiral_standard.ipynb  spiral_static.ipynb
scripts/: bessel_standard.py  bessel_static.py  run_sweep.py  spiral_standard.py
src/n3/data/: gaussian_mixture.py  mnist1d.py
src/n3/utils/: aggregate.py  config.py  path_manager.py  resource_manager.py  wandb.py
